# aevo-deep-fetch

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: config.py  index.py  main.py
src/api/: server.py
src/api/routes/: analytics_router.py
src/controllers/: ideas_controller.py  ideas_to_implements_controller.py  user_per_dep_controller.py
src/core/: config.py
src/models/: analytics_models.py  fetch-user-models.py  idea_models.py  individual_report_models.py  user_model.py
src/services/: analytics_service.py  excel_service.py  external_user_service.py  fetch_all_ideas.py  fetch_all_ideas_service.py  fetch_user_per_dep_service.py  file_service.py  filter_ideas_to_implements_per_dep_service.py  idea_service.py  individual_report_service.py
