[project]
name = "aevo-deep-fetch"
version = "0.1.0"
description = ""
authors = [
    {name = "wnascx",email = "wnascx@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clear (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
